products-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: app
          image: widgetario/products-api:21.03
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: db
              mountPath: "/app/config"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 2
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: db
          secret:
            secretName: products-api-secret
