products-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api

spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: products-api

  type: ClusterIP
